# api-rest-rust-axum

./: Cargo.toml  README.md
.github/workflows/: axum.yml  axum_api_rest_rust.yml
src/: app.rs  integration_tests.rs  main.rs
src/controller/: book_controller.rs
src/entity/: app_error.rs  book.rs  create_book.rs  error.rs  mod.rs  update_book.rs
src/service/: book_service.rs
