[package]
name = "axum_api_books"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-core = "0.2.9"
axum = {version = "0.6.4", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3.0", features = ["cors"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
axum-test-helper = { version = "0.*" }